Cleaned up backend
